--- a/index.html
+++ b/index.html
@@ -6,5 +6,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>React assignment</title>
 	</head>
-	<body></body>
+	<body>
+		<header><h2>React Assignments</h2></header>
+		<div>
+			<h3>assignment 1:</h3>
+		</div>
+		<div>
+			<h3>assignment 2:</h3>
+		</div>
+		<div>
+			<h3>assignment 3:</h3>
+		</div>
+		<div>
+			<h3>assignment 4:</h3>
+		</div>
+		<div>
+			<h3>assignment 5:</h3>
+		</div>
+	</body>
 </html>
