--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<body>
 		<header><h1>React Assignments</h2></header>
 		<div>
-			<h3>assignment 1:</h3>
+			<h3>assignment 1: Expenses Tracker</h3>
 		</div>
 		<div>
-			<h3>assignment 2:</h3>
+			<h3>assignment 2: Goal App</h3>
 		</div>
 		<div>
 			<h3>assignment 3:</h3>
