updated html main page & css style

--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" type="text/css" href="index.css" />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;800&display=swap" rel="stylesheet">
+
 		<title>React assignment</title>
 	</head>
 	<body>
 		<header><h1>React Assignments</h2></header>
-		<div>
-			<h3>assignment 1: Expenses Tracker</h3>
+		<div class="react-app">
+			<a href="https://siangyin.github.io/react-assignments/expenses-tracker/build/"><h3>Assignment 1: Expenses Tracker</h3></a>
 		</div>
-		<div>
-			<h3>assignment 2: Goal App</h3>
+		<div class="react-app">
+			<a href="https://siangyin.github.io/react-assignments/goal-app/build/"><h3>Assignment 2: Goal App</h3></a>
 		</div>
-		<div>
-			<h3>assignment 3:</h3>
+		<div class="react-app">
+			<a href="https://siangyin.github.io/react-assignments/add-user/build/"><h3>Assignment 3: Add User</h3></a>
 		</div>
-		<div>
-			<h3>assignment 4:</h3>
-		</div>
-		<div>
-			<h3>assignment 5:</h3>
+		<div class="react-app">
+			<a href="https://siangyin.github.io/react-assignments/"><h3>Assignment 4: </h3></a>
 		</div>
 	</body>
 </html>
