updated index.html new project list and pkg json file

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 			</ul></a>
 		</div>
 		<div class="react-app">
-			<a href="https://siangyin.github.io/react-assignments/"><h3>Assignment 4: </h3></a>
+			<a href="https://siangyin.github.io/react-assignments/login-page/build/"><h3>Assignment 4: Login-page</h3>
+			<p>Learning point: </p>
+			<ul>
+				<li>useEffect</li>
+			</ul></a>
 		</div>
 	</body>
 </html>
