--- a/index.html
+++ b/index.html
@@ -15,29 +15,41 @@
 	<body>
 		<header><h1>React Assignments</h2></header>
 		<div class="react-app">
-			<a href="https://siangyin.github.io/react-assignments/expenses-tracker/build/"><h3>Assignment 1: Expenses Tracker</h3>
+			<a href="https://siangyin.github.io/react-assignments/e-shop/build/"><h3>e-shop</h3>
+			<p>Learning point: </p>
+			<ul>
+				<li>mapping of product for each instances</li>
+			</ul></a>
+		</div>
+
+		<div class="react-app">
+			<a href="https://siangyin.github.io/react-assignments/expenses-tracker/build/"><h3>Expenses Tracker</h3>
 			<p>Learning point: </p>
 			<ul>
 				<li>Handle user input using props, "State" and callback function</li>
 				<li>Adding two-way binding and communicate between child and parent with passing of information</li>
 			</ul></a>
 		</div>
+
 		<div class="react-app">
-			<a href="https://siangyin.github.io/react-assignments/goal-app/build/"><h3>Assignment 2: Goal App</h3></a>
+			<a href="https://siangyin.github.io/react-assignments/goal-app/build/"><h3>Goal App</h3></a>
 		</div>
+
 		<div class="react-app">
-			<a href="https://siangyin.github.io/react-assignments/add-user/build/"><h3>Assignment 3: Add User</h3>
+			<a href="https://siangyin.github.io/react-assignments/add-user/build/"><h3>Add User</h3>
 			<p>Learning point: </p>
 			<ul>
 				<li>how to use apply error modal using state based on form input</li>
 			</ul></a>
 		</div>
+
 		<div class="react-app">
-			<a href="https://siangyin.github.io/react-assignments/login-page/build/"><h3>Assignment 4: Login-page</h3>
+			<a href="https://siangyin.github.io/react-assignments/login-page/build/"><h3>Login-page</h3>
 			<p>Learning point: </p>
 			<ul>
 				<li>useEffect</li>
 			</ul></a>
 		</div>
+		
 	</body>
 </html>
